fix visibility of graph edges

--- a/frontend/src/Graph/Graph.module.css
+++ b/frontend/src/Graph/Graph.module.css
@@ -15,11 +15,12 @@
 }
 
 .EdgesContainer {
-  position: absolute;
   top: 0;
   left: 0;
+  position: absolute;
   width: 100%;
   height: 100%;
   pointer-events: none;
+  overflow: visible;
   z-index: -1;
 }
